--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   
   <body>
 
-    <nav id="mainNavbar" class="navbar navbar-dark bg-dark navbar-expand-md">
+    <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-md py-0 fixed-top" >
         <a class="navbar-brand" href="#">Or Photos</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navLinks" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -39,6 +39,7 @@
         </div>
     </nav>
 
+  
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
