--- a/index.html
+++ b/index.html
@@ -1,69 +1,123 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="https://kit.fontawesome.com/c00ad845f8.js" crossorigin="anonymous"></script>
-    
+    <script
+      src="https://kit.fontawesome.com/c00ad845f8.js"
+      crossorigin="anonymous"
+    ></script>
+
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+
     <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700"
+      rel="stylesheet"
+    />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-<!--     
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+      crossorigin="anonymous"
+    />
+    <!--     
     font-awesome
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css"> -->
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="app.css" />
 
     <title>Or Photos</title>
   </head>
-  
+
   <body>
-    <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-md py-0 fixed-top" >
-        <a class="navbar-brand" href="#">Or Photos</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navLinks" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div id="navLinks" class="collapse navbar-collapse">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a href="" class="nav-link">HOME</a>
-                </li>
-                <li class="nav-item">
-                    <a href="" class="nav-link">GALLERY</a>
-                </li>
-                <li class="nav-item">
-                    <a href="" class="nav-link">ABOUT</a>
-                </li>
-            </ul>
-        </div>
+    <nav
+      id="mainNavbar"
+      class="navbar navbar-dark navbar-expand-md py-0 fixed-top"
+    >
+      <a class="navbar-brand" href="#">Or Photos</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navLinks"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div id="navLinks" class="collapse navbar-collapse">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a href="" class="nav-link">HOME</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link">GALLERY</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link">ABOUT</a>
+          </li>
+        </ul>
+      </div>
     </nav>
 
     <section class="container-fluid px-0">
-        <div class="row align-items-center">
-            <div class="col-sm-6">
-                <div id="headingGroup" class="text-white text-center d-none d-sm-block mt-5" >
-                    <h1 class="">OR <i class="fas fa-camera"></i> PHOTOS</h1>
-                    <h1 class="">OR <i class="fas fa-camera"></i> PHOTOS</h1>
-                    <h1 class="">OR <i class="fas fa-camera"></i> PHOTOS</h1>
-                    <h1 class="">OR <i class="fas fa-camera"></i> PHOTOS</h1>         
-                </div>
-            </div>
-            <div class="col-sm-6">
-                <img src="images/pic (1).jpg" class="img-fluid" alt="">
+      <div class="row align-items-center">
+        <div class="col-md-6">
+          <div
+            id="headingGroup"
+            class="text-white text-center d-none d-md-block mt-5"
+          >
+            <h1 class="">OR <i class="fas fa-camera"></i> PHOTOS</h1>
+            <h1 class="">OR <i class="fas fa-camera"></i> PHOTOS</h1>
+            <h1 class="">OR <i class="fas fa-camera"></i> PHOTOS</h1>
+            <h1 class="">OR <i class="fas fa-camera"></i> PHOTOS</h1>
+          </div>
+        </div>
+        <div class="col-md-6 p-0">
+          <img src="images/pic (1).jpg" class="img-fluid" alt="" />
+        </div>
+      </div>
+    </section>
+
+    <section class="container-fluid px-0">
+      <div class="row align-items-center text-center">
+        <div class="col-sm-6 p-0 order-2">
+          <img src="images/pic (2).jpg" alt="" class="img-fluid" />
+        </div>
+        <div class="col-sm-6 p-0 order-1 order-sm-2">
+        <div class="row justify-content-center p-4 py-sm-0">
+            <div class="col-10 col-lg-8 order-sm-1 blurb">
+                <h2>Or Photos</h2>
+                <img src="images/camera-icon.png" alt="" class="img-fluid d-none d-md-inline" style="width: 10%;">
+                <p class="lead" style="font-size:0.9rem">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi repellat distinctio eum neque ipsam praesentium, alias quisquam quaerat corrupti molestiae quis consequuntur modi voluptatem assumenda autem dicta! Quas, amet nostrum.</p>
             </div>
         </div>
+        </div>
+      </div>
     </section>
-  
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
