adding 2 more responsitive sections

--- a/index.html
+++ b/index.html
@@ -102,6 +102,40 @@
       </div>
     </section>
 
+    <section class="container-fluid px-0">
+        <div class="row align-items-center text-center">
+          <div class="col-sm-6 p-0 ">
+          <div class="row justify-content-center p-4 py-sm-0">
+              <div class="col-10 col-lg-8 blurb">
+                  <h2>Or Photos</h2>
+                  <img src="images/camera-icon.png" alt="" class="img-fluid d-none d-md-inline" style="width: 10%;">
+                  <p class="lead" style="font-size:0.9rem">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi repellat distinctio eum neque ipsam praesentium, alias quisquam quaerat corrupti molestiae quis consequuntur modi voluptatem assumenda autem dicta! Quas, amet nostrum.</p>
+              </div>
+          </div>
+          </div>
+          <div class="col-sm-6 p-0">
+            <img src="images/pic (3).jpg" alt="" class="img-fluid" />
+          </div>
+        </div>
+      </section>
+
+      <section class="container-fluid px-0">
+        <div class="row align-items-center text-center">
+          <div class="col-sm-6 p-0 order-2">
+            <img src="images/pic (4).jpg" alt="" class="img-fluid" />
+          </div>
+          <div class="col-sm-6 p-0 order-1 order-sm-2">
+          <div class="row justify-content-center p-4 py-sm-0">
+              <div class="col-10 col-lg-8 order-sm-1 blurb">
+                  <h2>Or Photos</h2>
+                  <img src="images/camera-icon.png" alt="" class="img-fluid d-none d-md-inline" style="width: 10%;">
+                  <p class="lead" style="font-size:0.9rem">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi repellat distinctio eum neque ipsam praesentium, alias quisquam quaerat corrupti molestiae quis consequuntur modi voluptatem assumenda autem dicta! Quas, amet nostrum.</p>
+              </div>
+          </div>
+          </div>
+        </div>
+      </section>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
